# GenAISys

./: .gitignore  README.md  pyproject.toml
genaisys/pygame/: __init__.py  snake.py
genaisys/systems/: duckdb.py
tests/pygame/: snake_test.py
tests/systems/: duckdb_test.py
